--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.11.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "@types/uuid": "^9.0.8"
   }
 }
