--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,17 +5,31 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    depends_on:
+      - db
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_NAME: wage_access_platform
+
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    depends_on:
+      - db
+
   db:
-    image: postgres:latest
+    build:
+      context: ./db
+      dockerfile: Dockerfile
     ports:
       - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: db
+      POSTGRES_DB: wage_access_platform
